# bpephrase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCxxopts.cmake
include/bpephrase/: dictionary.h  options.h
python/: ngrams.py  spans.py
scripts/: ngrams.sh  wmt14deen.sh
src/: CMakeLists.txt  dictionary.cc  main.cc
test/: iwslt14.tokenized.de-en.vocab.pt  train.en.10
test/data/: test.en.bigram  test.en.fivegram  test.en.fourgram  test.en.tok  test.en.trigram  train.en.bigrams  train.en.fivegrams  train.en.fourgrams  train.en.tokenization  train.en.trigram  valid.en.bigram  valid.en.bigrams  valid.en.fivegram  valid.en.fourgram  valid.en.tok  valid.en.trigram
